fix text alignment

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -434,6 +434,8 @@ img:hover {
   font-size: 30px;
   font-weight: 700;
   line-height: 1.2;
+  text-align: center;
+
 }
 .entry-featured-image {
   width: 940px;
